# c3nav

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  current_version  docker-compose.yml  loadproduction.old.sh  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: codeql-analysis.yml
deployment/docker/: .gitignore  Dockerfile_c3nav  Dockerfile_tileserver  c3nav-nginx.conf  c3nav-tiles.ini  c3nav.bash  compose.yaml  db_export.sh  db_import.sh  example.env  loadproduction_docker.sh  prepare.sh  tileserver-nginx.conf  tileserver.bash  update_tag.sh
doc/: c3nav.puml  docker.md  manual.md
docker/: Dockerfile  README.md  build.sh  c3nav-docker-dev.cfg  c3nav.cfg  entrypoint.sh  local_build.sh  local_build_tileserver.sh  tileserver.dockerfile
js-src/: event.ts
js-src/api/: api.ts  api2.ts  fetch-client.ts  v2.d.ts
js-src/c3nav-viewer/: AutoComplete.ts  DestinationInput.tsx  LocationDetails.tsx  Map.tsx  Messages.tsx  Modal.tsx  OriginInput.ts  RouteDetails.tsx  RouteOptions.tsx  RouteSummary.ts  Settings.ts  Sidebar.ts  State.ts  index.tsx  search.ts
res/: glider-nogrid-gray-blend.xcf  glider-nogrid.xcf  glider.xcf  mappings.35c3.json  mappings.36c3.json
src/: .isort.cfg  c3nav.cfg  cloc.sh  genuwu.py  manage.py  requirements-tileserver.txt  requirements.txt  requirements_dev.txt  requirements_mysql.txt  setup.cfg
src/c3nav/: __init__.py  asgi.py  celery.py  djangofixes.py  manage.py  models.py  routing.py  settings.py  urls.py  wsgi.py
src/c3nav/access/: admin.py  apply.py  forms.py  middleware.py  models.py  urls.py  views.py
src/c3nav/api/: __init__.py  api.py  apps.py  auth.py  authentication.py  exceptions.py  (+14 more)
src/requirements/: dev.txt  htmlmin.txt  memcached.txt  metrics.txt  mysql.txt  opengl.txt  postgres.txt  production-extra.txt  production.txt  redis.txt  rsvg-pygobject.txt  rsvg-pygobjet.txt  rsvg.txt  sentry.txt  server-asgi.txt  sso.txt  uwu.txt
tools/: FAKEMOBILECLIENT.TXT  fakemobileclient.py  locate.py
(+927 files in other folders)
